--- a/pom.xml
+++ b/pom.xml
@@ -283,11 +283,11 @@
             <artifactId>netty-all</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.barchart.udt</groupId>
             <artifactId>barchart-udt-bundle</artifactId>
             <version>2.3.0</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.littleshoot</groupId>
